<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cong.potlatch.ui.BrowseGiftsActivity" >
    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/refresh_data"
        android:title="@string/refresh_data"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
