<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/keyline_1_minus_8dp"
    android:orientation="vertical">



    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/transparent_bg"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
        android:layout_height="48dp">

        <ImageView
            android:src="@drawable/ic_drawer_create_gift"
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:layout_marginRight="32dp" />

        <EditText
        android:id="@+id/create_gift_title"
        android:background="@drawable/transparent_bg"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_text_hint" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/transparent_bg"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
        android:layout_height="100dp">

        <ImageView
            android:src="@drawable/ic_drawer_create_gift"
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:layout_marginRight="32dp" />

        <EditText
            android:id="@+id/create_gift_description"
            android:background="@drawable/transparent_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:maxLines="5"
            android:maxHeight="100dp"
            android:hint="@string/description_text_hint" />

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/select_category"
        android:orientation="horizontal"
        android:background="@drawable/transparent_bg"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/ic_drawer_category"
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:layout_marginRight="32dp" />

        <Spinner style="@style/Widget.Potlatch.HeaderBar.Spinner"
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/create_gift_image"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/image" />

</LinearLayout>